# smart-library

./: .dockerignore  .env.example  .gitignore  DOCKER_WINDOWS_TROUBLESHOOTING.md  Dockerfile  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  PLATFORM_SETUP.md  PRODUCTION.md  QUICKSTART.md  QUICKSTART_WINDOWS.md  README.md  UI_README.md  WINDOWS_DOCKER_FIXES.md  WINDOWS_PRODUCTION_SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-prod.bat  setup-prod.py  setup-prod.sh  setup.sh  setup_windows.bat  start.sh  tmp_chunk_test.py  ui-server.js  workflow.txt
.devcontainer/: Dockerfile  devcontainer.json
api/: __init__.py  dependencies.py  main.py  requirements.txt  schemas.py
api/routes/: documents.py  labels.py  search.py
notebooks/: ollama_test.ipynb  ollama_test2.ipynb
scripts/: move_metadata.sh  one_off_add_pdf_paths.py  organize_text.sh  rename-paper-id.sh  reset_db.py  run_grobid_scenario.py  strip_metadata.sh
src/smart_library/: config.py
tests/: conftest.py  test_llm_term_full_doc.py  test_llm_term_pipeline_smoke.py  test_llm_term_smoke.py  test_term_classification_api_smoke.py  test_term_classification_pipeline_smoke.py  test_term_classification_prompt_smoke.py  test_term_classification_smoke.py  test_terms_context_smoke.py
tests/integration/: test_llm_metadata_smoke.py  test_metadata_extraction.py  test_openai_client.py
tests/unit/: test_entities.py  test_entities_from_documents.py
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  (+1 more)
vector/: storage.py
(+347 files in other folders)
