[project]
name = "smart-library"
version = "0.1.0"
description = "A structured research library engine"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer",
    "rich",
    "pydantic",
    "sqlite-utils",
]

[project.scripts]
smartlib = "smart_library.cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
